hphp/test/zend/good/Zend/tests/traits/bugs/alias01.php.expectf
T:m1
T:m1
T:m2

Fatal error: Call to undefined method C1::a2() in %s/alias01.php on line 15
